[gd_scene load_steps=27 format=3 uid="uid://wgw4km4uc7fh"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_wau64"]
[ext_resource type="Texture2D" uid="uid://c7jti5gp87fni" path="res://Textures/UI/Information/InfoBox.png" id="2_0suyh"]
[ext_resource type="PackedScene" uid="uid://ctj2f7ofdkrr1" path="res://Scenes_and_scripts/UI/Buttons/pull_out_tab_button_up.tscn" id="2_ofglp"]
[ext_resource type="Script" path="res://Scenes_and_scripts/UI/Menus/menu_tab.gd" id="3_24y3d"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes_and_scripts/UI/Buttons/panelButton.tscn" id="4_eh4di"]
[ext_resource type="Texture2D" uid="uid://qaoot28mfcll" path="res://Textures/Buttons/icons/menu.png" id="5_0l85b"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="5_sq2sq"]
[ext_resource type="PackedScene" uid="uid://dh4niqtuyy5o3" path="res://popup_button.tscn" id="7_r536h"]
[ext_resource type="Texture2D" uid="uid://bmns12qjnvbff" path="res://Textures/Buttons/icons/exit.png" id="7_verjv"]
[ext_resource type="Theme" uid="uid://cfmbhoq8cuoge" path="res://Resources/Themes/ProjectTheme.tres" id="8_1y1ot"]
[ext_resource type="PackedScene" uid="uid://c338whou4al23" path="res://Scenes_and_scripts/UI/Tooltip.tscn" id="8_hwedl"]
[ext_resource type="Texture2D" uid="uid://cea5mj3u65016" path="res://Textures/Buttons/square_pressed_active.png" id="10_3qs86"]
[ext_resource type="Texture2D" uid="uid://btu2jj1bbbbil" path="res://Textures/Buttons/icons/palette.png" id="11_w1230"]
[ext_resource type="Script" path="res://Scenes_and_scripts/UI/Buttons/MuteButton.gd" id="12_jlkch"]
[ext_resource type="Texture2D" uid="uid://bxlc5rvpwjq8o" path="res://Textures/Buttons/icons/unmute.png" id="13_rwj10"]
[ext_resource type="Theme" uid="uid://c7hk3afo5tria" path="res://Resources/Themes/toggle_button.tres" id="15_ijs5h"]
[ext_resource type="PackedScene" uid="uid://b5pj0lanxu0o6" path="res://Scenes_and_scripts/UI/ColourPicker/palette_menu.tscn" id="15_ulpqo"]
[ext_resource type="Texture2D" uid="uid://ce37himikto8x" path="res://Textures/Buttons/icons/label.png" id="16_1c6xm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4ap8b"]
texture = ExtResource("2_0suyh")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
expand_margin_bottom = 10.0

[sub_resource type="Theme" id="Theme_jad7o"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_4ap8b")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ia2fd"]
resource_local_to_scene = true
shader = ExtResource("5_sq2sq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0la5c"]
resource_local_to_scene = true
shader = ExtResource("5_sq2sq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5xtmq"]
resource_local_to_scene = true
shader = ExtResource("5_sq2sq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bauei"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
texture = ExtResource("10_3qs86")
texture_margin_left = 5.0
texture_margin_top = 6.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="Theme" id="Theme_g2x2b"]
Button/styles/pressed = SubResource("StyleBoxTexture_bauei")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y07ol"]
resource_local_to_scene = true
shader = ExtResource("5_sq2sq")

[node name="MenuTab" type="Control" node_paths=PackedStringArray("ContentContainer", "TabButton", "MovingContainer")]
material = ExtResource("1_wau64")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jad7o")
script = ExtResource("3_24y3d")
ContentContainer = NodePath("MovingContainer/ContentContainer")
TabButton = NodePath("MovingContainer/TabButton")
MovingContainer = NodePath("MovingContainer")
move_direction = 1

[node name="MovingContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 0
offset_right = 27.0
offset_bottom = 16.0
theme_override_constants/separation = 0
alignment = 1

[node name="TabButton" parent="MovingContainer" instance=ExtResource("2_ofglp")]
material = SubResource("ShaderMaterial_ia2fd")
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
TabIcon = ExtResource("5_0l85b")
TabMinimumSize = Vector2(21, 2.08165e-12)
icon_use_parent_material = true

[node name="ContentContainer" type="PanelContainer" parent="MovingContainer"]
use_parent_material = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MovingContainer/ContentContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="Exit" parent="MovingContainer/ContentContainer/HBoxContainer" instance=ExtResource("4_eh4di")]
material = SubResource("ShaderMaterial_0la5c")
layout_mode = 2
theme = ExtResource("8_1y1ot")
minimum_size = Vector2(26, 26)
icon = ExtResource("7_verjv")
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="MovingContainer/ContentContainer/HBoxContainer/Exit" instance=ExtResource("8_hwedl")]
tooltip = "Exit to menu"

[node name="Mute" parent="MovingContainer/ContentContainer/HBoxContainer" instance=ExtResource("4_eh4di")]
material = SubResource("ShaderMaterial_5xtmq")
layout_mode = 2
theme = SubResource("Theme_g2x2b")
script = ExtResource("12_jlkch")
minimum_size = Vector2(26, 26)
toggle_mode = true
button_pressed = true
icon = ExtResource("13_rwj10")
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="MovingContainer/ContentContainer/HBoxContainer/Mute" instance=ExtResource("8_hwedl")]
tooltip = "Mute"

[node name="Palettes" parent="MovingContainer/ContentContainer/HBoxContainer" instance=ExtResource("7_r536h")]
layout_mode = 2
popup_scene = ExtResource("15_ulpqo")
minimum_size = Vector2(26, 26)
icon = ExtResource("11_w1230")
expand_icon = true

[node name="Tooltip" parent="MovingContainer/ContentContainer/HBoxContainer/Palettes" instance=ExtResource("8_hwedl")]
tooltip = "Palettes"

[node name="ShowLabels" parent="MovingContainer/ContentContainer/HBoxContainer" instance=ExtResource("4_eh4di")]
material = SubResource("ShaderMaterial_y07ol")
layout_mode = 2
theme = ExtResource("15_ijs5h")
minimum_size = Vector2(26, 26)
toggle_mode = true
button_pressed = true
icon = ExtResource("16_1c6xm")
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="MovingContainer/ContentContainer/HBoxContainer/ShowLabels" instance=ExtResource("8_hwedl")]
tooltip = "Show line labels"

[connection signal="pressed" from="MovingContainer/ContentContainer/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="toggled" from="MovingContainer/ContentContainer/HBoxContainer/ShowLabels" to="." method="_on_show_labels_toggled"]
